# tpr-gen3

./: .gitignore  README.md  config_branch.json  package.json  test_trigger_data.json
.github/workflows/: build.yml  reusable.yml  target.yml  test-target.yml
scripts/: abc.mjs  copy-build-to-tauri.mjs
scripts/convenience/: format-public-key.js
scripts/util/: getRootDir.mjs  searchUpFileTree.mjs
scripts/workflows/create-output/: action.yml  create-output.js
scripts/workflows/get-rust-triple/: action.yml  get-rust-triple.js
scripts/workflows/pull-web-artifacts/: README.md  action.yml  package.json  pull-web-artifacts.js
scripts/workflows/pull-web-artifacts/action-dist/: index.js
scripts/workflows/pull-web-artifacts/src/: pull-web-artifacts.ts
scripts/workflows/sign-files/: action.yml  sign-files.js
scripts/workflows/trigger-pull-artifacts/: action.yml  package.json  trigger-pull-artifacts.js  tsconfig.json
tauri-app/: .gitignore  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-app/src/: App.css  App.tsx  branch-row.tsx  main.tsx  settings-modal.module.css  settings-modal.tsx  types.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/migrations/2024-11-08-003940_create_branches_table/: down.sql  up.sql
tauri-app/src-tauri/src/: api_manager.rs  config.rs  db.rs  global.rs  lib.rs  models.rs  path.rs  query.rs  schema.rs
tauri-app/src-tauri/src/models/: branch.rs
tauri-app/src/state/: api-slice.ts  counter-slice.ts  store.ts
website/src/app/: page.tsx
website/src/common/: get-env.ts
(+2 files in other folders)
